syntax = "proto3";

package grpc.test;

option java_package = "com.hyf.grpc.hello";
option java_multiple_files = true;

// 服务定义的四种方式
service Rest {
  rpc simplex(Request) returns (Response);

  rpc RequestStream(stream Request) returns (Response);

  rpc ResponseStream(Request) returns (stream Response);

  rpc FullDuplex(stream Request) returns (stream Response);
}

message Request {
  string host = 1;
  int32 port = 2;
  string uri = 3;
  string method = 4;
  map<string, string> params = 5;
}

message Response {
  int32 code = 1;
  string text = 2;
  map<string, string> values = 3;
}